@@ -105,8 +105,12 @@
   College, Oxford.
 
   Edgerton, D. and Wells, C. (1994) ``Critical Values for the Cusumsq
-  Statistic in Medium and Large Sized Samples'', \emph{Oxford Bulletin of
-  Economics and Statistics}, 56, pp. 355--65.
+  Statistic in Medium and Large Sized Samples'', \emph{Oxford Bulletin
+    of Economics and Statistics}, 56, pp. 355--65.
+
+  Elliott, G., Rothenberg, T. J., and Stock, J. H. (1996) ``Efficient
+  Tests for an Autoregressive Unit Root'', \emph{Econometrica}, 64,
+  pp. 813--36.
 
   Fiorentini, G., Calzolari, G. and Panattoni, L. (1996) ``Analytic
   Derivatives and the Computation of GARCH Estimates'', \emph{Journal
