@@ -188,6 +188,7 @@ void time_series_menu_state (gboolean s)
     flip(mdata->ifac, "/Variable/Correlogram", s);
     flip(mdata->ifac, "/Variable/Spectrum", s);
     flip(mdata->ifac, "/Variable/Augmented Dickey-Fuller test", s);
+    flip(mdata->ifac, "/Variable/ADF-GLS test", s);
     flip(mdata->ifac, "/Variable/KPSS test", s);
     flip(mdata->ifac, "/Variable/Filter", s);
 #ifdef HAVE_X12A
